--- a/informatii.html
+++ b/informatii.html
@@ -272,8 +272,7 @@
                   </a>
                 </div>
                 <p class="desc mb-35">
-                  FastLineGroups este o firma de transport international de la
-                  adresa la adresa pe ruta Romania Germania,Olanda si Belgia.
+                   FastLineGroups este o firma de transport international de persoane pe ruta Romania Germania si Italia.
                 </p>
               </div>
             </div>
