--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                 ajunge la destinație, în siguranță. Cu fiecare drum suntem mai
                 aproape de nevoile tale<br />Italia se numără printre cele mai
                 apreciate destinații atât în ceea ce privește forța de muncă,
-                cât și pentru turism. Alex Travel, compania de transport
+                cât și pentru turism, compania de transport
                 internațional persoane cu o vastă experiență în domeniu, îți
                 pune la dispoziție cele mai bune condiții de călătorie pe ruta
                 România Italia și retur la cel mai bun raport calitate – preț.
